--- a/test01/common/css/common.css
+++ b/test01/common/css/common.css
@@ -2,7 +2,7 @@
 @import url("reset.css");
 
 @import url("swiper-bundle.css");
-@import url("jquery.fullpage.css");
+/* @import url("jquery.fullpage.css"); */
 @import url("animations.css");
 
 
