--- a/test01/common/css/common.css
+++ b/test01/common/css/common.css
@@ -36,3 +36,31 @@
 
 /*  */
 section {min-height:100vh;}
+
+
+
+/* section03 */
+.section03 .projectList {display:flex; flex-direction: row; flex-wrap: wrap; align-items: flex-start;}
+.section03 .projectList li {width:23.575%; margin:0 1.9% 1.9% 0;}
+.section03 .projectList li:nth-child(4n) {margin-right:0;}
+
+
+
+/* 유튜브 팝업 */
+.pop_wrap {display: none;position: fixed;top: 0;left: 0;right: 0;bottom: 0;z-index: 1000;overflow: auto;text-align: center;background-color: rgb(0 0 0 / 60%);}
+.pop_wrap.on {display: block;}
+.pop_wrap:before {content: "";display: inline-block;height: 100%;vertical-align: middle;}
+.pop_wrap .pop_inwrap {position: relative;display: inline-block;max-width:80%;vertical-align: middle;margin:0;padding:46px 46px 50px;background-color:#fff;box-sizing: border-box;}
+.pop_wrap .head {max-width:856px; margin:0 auto 32px; padding:0 40px 0 0; text-align:left;}
+.pop_wrap .head .tit {margin:0 0 12px; font-size:26px; font-weight:700; color:#000;}
+.pop_wrap .head .tdate {font-size:16px; line-height:1.5; color:#666;}
+
+.pop_wrap .tab li a{font-size: 2.4rem;color: #c6c5c5;}
+.pop_wrap .tab li.on a{color: var(--point);}
+.pop_wrap .ibtn_close {position: absolute;top:50px;right:45px; width:38px;height:38px; font-size:0; background:#fff; cursor:pointer;}
+.pop_wrap .ibtn_close:before {content: "";position: absolute;top: 50%;left: 50%;width: 100%;height: 2px;-ms-transform: rotate(45deg) translate(-50%, -50%);transform: rotate(45deg) translate(-50%, -50%);-ms-transform-origin: 0 0;transform-origin: 0 0;background-color: #9e9e9e;background-image: none;}
+.pop_wrap .ibtn_close:after {content: "";position: absolute;top: 50%;left: 50%;width: 100%;height: 2px;-ms-transform: rotate(45deg) translate(-50%, -50%);transform: rotate(-45deg) translate(-50%, -50%);-ms-transform-origin: 0 0;transform-origin: 0 0;background-color: #9e9e9e;background-image: none;}
+.pop_wrap .ibtn_close:hover:before {background-color:#ea1f28;}
+.pop_wrap .ibtn_close:hover:after {background-color:#ea1f28;}
+.pop_inwrap._sns .body {padding: 0;}
+.pop_inwrap._sns .body iframe {width: 856px;height: 47vw;max-height: 590px;}
